Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Dep.out
Dep.java:11:1: compiler.warn.missing.deprecated.annotation
- compiler.err.warnings.and.werror
1 error
1 warning
